--- a/canvas/index.html
+++ b/canvas/index.html
@@ -15,7 +15,7 @@
 
 
     <!-- <script src="main.js"></script> -->
-    <script src="connected-circles.js"></script>
+    <script src="mind-map.js"></script>
 </body>
 
 </html>
